# maximo_coding_test

./: README.md
devel/: .catkin  setup.sh
src/final_project/src/: main.cpp
src/maximo_coding_test/: CMakeLists.txt  README.md  package.xml
src/maximo_coding_test/diagrams/: classes.puml  sequence.puml
src/maximo_coding_test/include/maximo_coding_test/: explorer.hpp  follower.hpp  sar_base.hpp
src/maximo_coding_test/launch/: explorer_move_base.launch  follower_move_base.launch  multiple_robots.launch  navigation.launch  start_sar_nodes.launch  start_world.launch
src/maximo_coding_test/launch/mapping/: bringup.launch  start_mapping.launch  start_navigation.launch
src/maximo_coding_test/src/: explorer.cpp  explorer_node.cpp  follower.cpp  follower_node.cpp  main.cpp  sar_base.cpp
src/maximo_coding_test/srv/: FollowerGoals.srv
